2010-09-21 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in the destructor reverse the order of the mutex
	lock and the write lock to satisfy the helgrind (which seems to
	want them to be in the same as as they appear elsewhere in the
	code) (addresses some of problems reported by Andreas Streichardt)
	* src/fileManager.cpp: in getFile accquire read lock before the
	mutex lock (helgrind complained about lock order violation),
	remove the read lock from ibis::fileManager::recordFile (because
	it is unnecessary)
	* src/fileManager.cpp:1306 refer to undefined variable it
	* src/util.cpp: the function groupby1000 can not handle incoming
	value being 0

2010-09-20 John Wu <John dot Wu at ACM dot org>
	* src/util.h: rewrite functions ibis::util::trim and
	ibis::util::removeTail to remove the function call to strlen that
	access uninitialized variables in some cases
	* src/util.h, src/util.cpp: move strnewdup from util.h to util.cpp

2010-09-13 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:556 remove the condition on _XOPEN_SOURCE which
	causes problems on euclid.nersc.gov with PGI compiler (fall back
	to use strtod which is present on more platforms)
	* INSTALL: update issue (9) regarding error with PGI compiler
	after testing runs on ewok

2010-09-10 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp, src/bitvector64.cpp: fix errors in
	conditional code for WAH_CHECK_SIZE
	* src/util.h, src/util.cpp: change the file
	ibis::util::writeLogFileHeader to test the incoming arguments (to
	address the problem with log files reported by Karen Schomburg)
	* src/ibis.h: register the function ibis::util::closeLogFile with
	ibis::init as the last function to be invoked during exit, this
	removes the need for users to invoke the function

2010-09-09 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp: replace all calls to util::logMessage with
	LOGGER macro

2010-09-08 John Wu <John dot Wu at ACM dot org>